# market_bot_ws

./: .env  .gitignore  CREATE TABLE IF NOT EXISTS market.txt  Dockerfile  Makefile  SELECT.txt  commands.py  config.py  data.json  docker-compose.yml  logger.py  main.py  pyproject.toml  r_factor_updater.py  requirements.txt  run.sh  startup-script.sh  telegram.py  test.py  tick_data_updater.py  ticker.py  utils.py  volume_delta.txt  ws_test.py  ws_test2.py
api/: client.py  exceptions.py  models.py
db/: __init__.py  collections.py  exceptions.py
server/api/: __init__.py  client.py  exceptions.py  models.py
server/db/: __init__.py  clickhouse_db.py  clickhouse_queries.txt  client.py  collections.py  mongo_db.py  option_oi_table_queries.txt  tables.py
server/modules/expiry/: repository.py
server/modules/indices/: models.py  repository.py
server/modules/options/: models.py  update_option_chain.py
server/modules/r_factor/: r_factor_updater.py
server/modules/stocks/: models.py  repository.py
server/modules/telegram/: commands.py  telegram.py
server/modules/ticker/: candle_flusher.py  extra.txt  marketfeed_pb2.py  marketfeed_pb2.pyi  models.py  ohlc_ticker.py  tick_data_updater.py  ticker.py  ticker_back_up.py  volume_ticker.py  volume_ticker_clickhouse.py
server/modules/token/: enums.py  repository.py
server/modules/upstox/: services.py
server/utils/: is_dt.py  ist.py  logger.py  scheduler.py  time_tracker.py  utils.py
test/: volume_ticker_test.py
